fix img wrong path

--- a/_posts/2020-12-21.md
+++ b/_posts/2020-12-21.md
@@ -3,20 +3,20 @@ title: [HackTheBox - Lame]
 date: 2020-12-21 21:50:00 
 categories: [Hackthebox walkthroughs]
 tags: [htb-linux-easy, metasploit, ftp, samba, writeup, oscp-prep]
-image: https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/lame.png 
+image: https://amirr0r.github.io/assets/https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/htb/machines/linux/easy/lame/lame.png 
 ---
 
 ## Foothold
 
 ### Nmap scan (open ports)
 
-![nmap](img/nmap.png)
+![nmap](https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/nmap.png)
 
 ### FTP
 
 We can log in as `anonymous`:
 
-![ftp](img/ftp.png)
+![ftp](https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/ftp.png)
 
 But there are no interesting files...
 
@@ -26,7 +26,7 @@ Let's check what we can enumerate on the other ports !
 
 I couldn't get anything from samba:
 
-![smb](img/smb.png)
+![smb](https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/smb.png)
 
 > Maybe we have to scan more ports, but before that we have to look for potential exploits that can help us with `vsftpd 2.3.4`
 
@@ -36,21 +36,21 @@ I couldn't get anything from samba:
 
 Bingo :
 
-![searchsploit](img/searchsploit.png)
+![searchsploit](https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/searchsploit.png)
 
 Unfortunately:
 
-![msf](img/msf.png)
+![msf](https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/msf.png)
 
 #### smbd 3.0.20
 
 By running a more complete nmap scan, we get smbd version:
 
-![nmap-2](img/nmap-2.png)
+![nmap-2](https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/nmap-2.png)
 
 And this will lead us to root :arrow_down: 
 
 ## Root
 
-![msf-smb-3-0-20-root](img/msf-smb-3-0-20-root.png)
+![msf-smb-3-0-20-root](https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/msf-smb-3-0-20-root.png)
 
