--- a/_posts/2020-12-21-htb-lame.md
+++ b/_posts/2020-12-21-htb-lame.md
@@ -1,5 +1,5 @@
 ---
-title: [HackTheBox - Lame]
+title: HackTheBox - Lame
 date: 2020-12-21 21:50:00 +0100
 categories: [Hackthebox walkthroughs]
 tags: [htb-linux-easy, metasploit, ftp, samba, writeup, oscp-prep]
