fix 'arrow down'

--- a/_posts/2020-12-21-htb-lame.md
+++ b/_posts/2020-12-21-htb-lame.md
@@ -48,7 +48,7 @@ By running a more complete nmap scan, we get smbd version:
 
 ![nmap-2](https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/nmap-2.png)
 
-And this will lead us to root :arrow_down: 
+And this will lead us to root ↓ 
 
 ## Root
 
