creating sub categories

--- a/_posts/2020-12-21-htb-lame.md
+++ b/_posts/2020-12-21-htb-lame.md
@@ -1,7 +1,7 @@
 ---
 title: HackTheBox - Lame
 date: 2020-12-21 21:50:00 +0100
-categories: [Hackthebox walkthroughs]
+categories: [Hackthebox walkthroughs, Linux, Easy]
 tags: [htb-linux-easy, metasploit, ftp, samba, writeup, oscp-prep]
 image: https://amirr0r.github.io/assets/img/htb/machines/linux/easy/lame/lame.png 
 ---
