--- a/_posts/2021-01-06-htb-devel.md
+++ b/_posts/2021-01-06-htb-devel.md
@@ -2,7 +2,7 @@
 title: HackTheBox - Devel
 date: 2021-01-06 00:28:51 +0100
 categories: [Hackthebox walkthroughs, Windows, Easy]
-tags: [htb-windows-easy, ftp, aspx, reverse-shell, MS11-046, CVE-2011-1249, mingw-w64, msfvenom, metasploit, meterpreter, suggester, MS10-015, CVE-2010-0232, writeup, oscp-prep]
+tags: [htb-windows-easy, ftp, aspx, reverse-shell, powershell, MS11-046, CVE-2011-1249, mingw-w64, msfvenom, metasploit, meterpreter, suggester, MS10-015, CVE-2010-0232, writeup, oscp-prep]
 image: https://amirr0r.github.io/assets/img/htb/machines/windows/easy/devel/Devel.png
 ---
 
