forgot to put CVE id in tags'

--- a/_posts/2021-01-19-htb-sense.md
+++ b/_posts/2021-01-19-htb-sense.md
@@ -2,7 +2,7 @@
 title: HackTheBox - Sense
 date: 2021-01-19 21:50:04 +0100
 categories: [Hackthebox walkthroughs, Linux, Easy]
-tags: [htb-linux-easy, FreeBSD, pfSense, gobuster, default credentials, searchsploit, writeup, oscp-prep]
+tags: [htb-linux-easy, FreeBSD, pfSense, gobuster, default credentials, searchsploit, CVE-2014-4688, writeup, oscp-prep]
 image: https://amirr0r.github.io/assets/img/htb/machines/linux/easy/sense/Sense.png
 ---
 
