--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -23,14 +23,14 @@ This is all more true since the [2020 update](https://www.offensive-security.com
     + [Rules reminder](#rules-reminder)
     + [Dry run](#dry-run)
 3. [Useful OSCP reviews/resources](#3-useful-oscp-reviewsresources)
-
+<!-- 
 New course trailer:
 
 <div class="container">
     <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" loading="lazy" src="https://player.vimeo.com/video/384631124?autoplay=0&amp;title=0&amp;byline=0&amp;portrait=0" frameborder="0" sandbox="allow-same-origin allow-scripts" allowfullscreen></iframe>
     </div>
-</div>
+</div> -->
 
 ___
 
