update titles in summary

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -15,11 +15,11 @@ This is all more true since the [2020 update](https://www.offensive-security.com
 
 ## Summary
 
-1. [Vulnerable machines To-Do List](#1-lab-preparation-vulnerable-machines-to-do-list)
+1. [**Lab preparation**: Vulnerable machines To-Do List](#1-lab-preparation-vulnerable-machines-to-do-list)
     + [HackTheBox](#hacktheboxeu-netsecfocus-trophy-room)
     + [TryHackMe](#tryhackmecom)
     + [Vulnhub](#vulnhubcom)
-2. [Exam dry run](#2-exam-preparation)
+2. [**Exam preparation**](#2-exam-preparation)
     + [Rules reminder](#rules-reminder)
     + [Dry run](#dry-run)
 3. [Useful OSCP reviews/resources](#3-useful-oscp-reviewsresources)
