rm tags due to responsive issue

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -42,30 +42,30 @@ The following list of VM is inspired from [TJ_Null's list of OSCP-like VMs](http
 
 #### Linux
 
-Machine         | Difficulty | Status  | Tags                                                                                                                                                                  | My walkthrough                                     |
-----------------|------------|---------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------|
-**Lame**        | Easy       | &#9989; | `ftp`, `smbd 3.0.20`, `metasploit`                                                                                                                                    | [link](https://amirr0r.github.io/posts/lame)       |
-**Beep**        | Easy       | &#9989; | `Elastix`, `LFI`, `bruteforce with delay`                                                                                                                             |       |
-**Blocky**      | Easy       | &#9989; | `Worpress`, `jd-gui`, `sudo weak configuration`                                                                                                                       | [link](https://amirr0r.github.io/posts/blocky)     |
-**Mirai**       | Easy       | &#9989; | `Raspberry PI`, `default credentials`, `file recovery`                                                                                                                | [link](https://amirr0r.github.io/posts/mirai)      |
-**Shocker**     | Easy       | &#9989; | `Shellshock`, `meterpreter`, `GTFObins`                                                                                                                               | [link](https://amirr0r.github.io/posts/shocker)    |
-**Nibbles**     | Easy       | &#9989; | `Nibbleblog`, `default credentials`, `reverse shell`, `meterpreter`, `sudo weak configuration`                                                                        | [link](https://amirr0r.github.io/posts/nibbles)    |
-**Valentine**   | Easy       | &#9989; | `nmap scan vuln`, `Heartbleed`, `linpeas` `tmux privesc`                                                                                                              | [link](https://amirr0r.github.io/posts/valentine)  |
-**SwagShop**    | Easy       | &#9989; | `Magento`, `fixing exploit`, `linpeas`, `sudo weak configuration`, `vi`                                                                                               | [link](https://amirr0r.github.io/posts/swagshop)   |
-**Networked**   | Easy       | &#9989; | `file upload bypass`, `magic bytes`, `cron`, `network-scripts`, `full disclosure`                                                                                     | [link](https://amirr0r.github.io/posts/networked)  |
-**Bashed**      | Easy       | &#9989; | `phpbash`, `reverse shell`, `sudo weak configuration`                                                                                                                 | [link](https://amirr0r.github.io/posts/bashed)     |
-**Irked**       | Easy       | &#9989; | `backdoor`, `UnrealIRCd`, `steganography`, `linpeas`, `SUID`, `ghidra`                                                                                                | [link](https://amirr0r.github.io/posts/irked)      |
-**FriendZone**  | Easy       | &#9989; | `samba`, `smclient`, `smbmap`, `DNS zone transfer`, `LFI`, `crontabs`, `pspy`                                                                                         | [link](https://amirr0r.github.io/posts/friendzone) |
-**Frolic**      | Easy       | &#9989; | `esoteric langages`, `zip2john`, `playSMS`, `SUID`, `pwn`, `ret2libc`, `ghidra`, `gdb-peda`                                                                           | [link](https://amirr0r.github.io/posts/frolic)     |
-**Postman**     | Easy       | &#9989; | `redis`, `ssh2john`, `miniserv`, `webmin`, `metasploit`                                                                                                               | [link](https://amirr0r.github.io/posts/postman)    |
-**Sense**       | Easy       | &#9989; | `FreeBSD`, `pfSense`, `gobuster`, `searchsploit`                                                                                                                      | [link](https://amirr0r.github.io/posts/sense)      |
-**Sunday**      | Easy       | &#9989; | `Solaris`, `SunOS`, `finger`, `guessing`, `hashcat`, `sudo misconfiguration`, `GTFOBins`, `wget`                                                                      | [link](https://amirr0r.github.io/posts/sunday)     |
-**OpenAdmin**   | Easy       | &#9989; | `OpenNetAdmin`, `RCE`, `plain text password`, `MySQL`, `hashcat`, `medusa`, `hydra`, `ssh port forwarding`, `ssh2john`, `sudo weak configuration`, `GTFOBins`, `nano` | [link](https://amirr0r.github.io/posts/openadmin)  |
-**Traverxec**   | Easy       | &#9989; | `nostromo`, `RCE`, `metasploit`, `hashcat`, `ssh2john`, `sudo weak configuration`, `GTFOBins`, `journalctl`, `less`, `shrink terminal`                                | [link](https://amirr0r.github.io/posts/traverxec)  |
-**Admirer**     | Easy       | &#9989; | `gobuster`, `ftp`, `Adminer`, `MariaDB`, `python module hijacking`                                                                                                    | [link](https://amirr0r.github.io/posts/admirer)    |
-**Blunder**     | Easy       | &#9989; | `Bludit`, `bruteforce protection bypass`, `chaining exploits`, `cewl`, `hashcat`, `rule-based attack`, `sudo undeflow`                                                | [link](https://amirr0r.github.io/posts/blunder)    |
-**Doctor**      | Easy       | &#9989; | `SSTI`, `reverse shell`, `plain text password`. `splunk`, `SplunkWhisperer2`                                                                                          | [link](https://amirr0r.github.io/posts/doctor)     |
-**Tabby**       | Easy       | &#9989; | `LFI`, `Tomcat`, `reverse shell`, `JohnTheRipper`, `zip2john`, `LXD group privesc`                                                                                    | [link](https://amirr0r.github.io/posts/tabby)      |
+Machine         | Difficulty | Status  | My walkthrough                                     |
+----------------|------------|---------|----------------------------------------------------|
+**Lame**        | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/lame)       |
+**Beep**        | Easy       | &#9989; |                                                    |
+**Blocky**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/blocky)     |
+**Mirai**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/mirai)      |
+**Shocker**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/shocker)    |
+**Nibbles**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/nibbles)    |
+**Valentine**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/valentine)  |
+**SwagShop**    | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/swagshop)   |
+**Networked**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/networked)  |
+**Bashed**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/bashed)     |
+**Irked**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/irked)      |
+**FriendZone**  | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/friendzone) |
+**Frolic**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/frolic)     |
+**Postman**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/postman)    |
+**Sense**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/sense)      |
+**Sunday**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/sunday)     |
+**OpenAdmin**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/openadmin)  |
+**Traverxec**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/traverxec)  |
+**Admirer**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/admirer)    |
+**Blunder**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/blunder)    |
+**Doctor**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/doctor)     |
+**Tabby**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/tabby)      |
 **Popcorn**     | Medium     | &#10060;|  |  |
 **Cronos**      | Medium     | &#10060;|  |  |
 **Jarvis**      | Medium     | &#10060;|  |  |
@@ -81,12 +81,12 @@ Machine         | Difficulty | Status  | Tags                                   
 
 #### Windows
 
-Machine         | Difficulty | Status   | Tags                                                                                                                                     | My walkthrough                            |
-----------------|------------|----------|------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------|
-**Legacy**      | Easy       | &#9989;  | `samba`, `MS08-067`, `meterpreter`                                                                                                       | [link](https://amirr0r.github.io/posts/legacy)     |
-**Blue**        | Easy       | &#9989;  | `EternalBlue`, `MS17-010`                                                                                                                | [link](https://amirr0r.github.io/posts/blue)       |
-**Devel**       | Easy       | &#9989;  | `ftp`, `aspx`, `reverse shell`, `MS11-046`, `mingw-w64`, `msfvenom`, `meterpreter`, `suggester`, `MS10-015`                              | [link](https://amirr0r.github.io/posts/devel)      |
-**Optimum**     | Easy       | &#9989;  | `HttpFileServer`, `meterpreter`, `RCE`, `tcpdump`, `nishang`, `powershell`, `Sherlock`, `Watson`, `Windows-Exploit-Suggester`, `wesng`   | [link](https://amirr0r.github.io/posts/optimum)    |
+Machine         | Difficulty | Status   | My walkthrough                                     |
+----------------|------------|----------|----------------------------------------------------|
+**Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/legacy)     |
+**Blue**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/blue)       |
+**Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/devel)      |
+**Optimum**     | Easy       | &#9989;  | 
 **Granny**      | Easy       | &#10060; | |
 **Artic**       | Easy       | &#10060; | |
 **Grandpa**     | Easy       | &#10060; | |
@@ -117,14 +117,14 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 
 List inspired from **[abatchy**'s blog: OSCP-like Vulnhub VMs](https://www.abatchy.com/2017/02/oscp-like-vulnhub-vms) 
 
-Machine         | Difficulty   | Status   | Tags | My walkthrough |
-----------------|--------------|----------|------|----------------|
-**FristiLeaks** | Beginner     | &#9989;  | `guessing`, `file upload bypass`, `cron`, `sudo misconfiguration` | [link](https://github.com/amirr0r/vulnhub/tree/master/FristiLeaks#fristileaks-13) |
-**Stapler**     | Beginner     | &#9989;  | `netdiscover`, `nikto`, `gobuster`, `wordpress`, `wpscan`, `brute-force`, `reverse shell`, `searchsploit`, `CVE-2016-4557`, `kernel exploit` | [link](https://amirr0r.github.io/posts/vulnhub-stapler/)  |
-**PwnLab**      | Beginner     | &#9989;  | `netdiscover`, `nikto`, `LFI`, `php filter`, `MySQL`, `magic bytes`, `file upload bypass`, `tcpdump`, `lang cookie`, `reverse shell`, `ghidra`, `PATH`, `format string exploit` | [link](https://amirr0r.github.io/posts/vulnhub-pwnlab/) |
-**Brainpan**    | Intermediate | &#10060; | | |
-**Mr-Robot**    | Intermediate | &#9989;  | `netdiscover`, `hydra`, `wordpress`, `wpscan`, `reverse shell`, `hashcat`, `SUID`, `GTFOBins`, `nmap` | [link](https://amirr0r.github.io/posts/vulnhub-mr-robot/) |
-**Vulnix**      | Intermediate | &#10060; | | |
+Machine         | Difficulty   | Status   | My walkthrough                                                                    |
+----------------|--------------|----------|-----------------------------------------------------------------------------------|
+**FristiLeaks** | Beginner     | &#9989;  | [link](https://github.com/amirr0r/vulnhub/tree/master/FristiLeaks#fristileaks-13) |
+**Stapler**     | Beginner     | &#9989;  | [link](https://amirr0r.github.io/posts/vulnhub-stapler/)                          |
+**PwnLab**      | Beginner     | &#9989;  | [link](https://amirr0r.github.io/posts/vulnhub-pwnlab/)                           |
+**Brainpan**    | Intermediate | &#10060; | |
+**Mr-Robot**    | Intermediate | &#9989;  | [link](https://amirr0r.github.io/posts/vulnhub-mr-robot/)                         |
+**Vulnix**      | Intermediate | &#10060; | |
 
 ___
 
