--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -42,7 +42,7 @@ The following list of VM is inspired from [TJ_Null's list of OSCP-like VMs](http
 
 #### Linux
 
-Machine         | Difficulty | Status  | My walkthrough                                     |
+Machine         | Difficulty | Status  | WU                                                 |
 ----------------|------------|---------|----------------------------------------------------|
 **Lame**        | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/lame)       |
 **Beep**        | Easy       | &#9989; |                                                    |
@@ -81,7 +81,7 @@ Machine         | Difficulty | Status  | My walkthrough                         
 
 #### Windows
 
-Machine         | Difficulty | Status   | My walkthrough                                     |
+Machine         | Difficulty | Status   | WU                                                 |
 ----------------|------------|----------|----------------------------------------------------|
 **Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/legacy)     |
 **Blue**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/blue)       |
@@ -115,9 +115,9 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 
 ### [`vulnhub.com`](https://www.vulnhub.com/)
 
-List inspired from **[abatchy**'s blog: OSCP-like Vulnhub VMs](https://www.abatchy.com/2017/02/oscp-like-vulnhub-vms) 
+List inspired from [**abatchy**'s blog: OSCP-like Vulnhub VMs](https://www.abatchy.com/2017/02/oscp-like-vulnhub-vms) 
 
-Machine         | Difficulty   | Status   | My walkthrough                                                                    |
+Machine         | Difficulty   | Status   | WU                                                                                |
 ----------------|--------------|----------|-----------------------------------------------------------------------------------|
 **FristiLeaks** | Beginner     | &#9989;  | [link](https://github.com/amirr0r/vulnhub/tree/master/FristiLeaks#fristileaks-13) |
 **Stapler**     | Beginner     | &#9989;  | [link](https://amirr0r.github.io/posts/vulnhub-stapler/)                          |
