--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -1,5 +1,5 @@
 ---
-title: How do I prepare for the OSCP?
+title: How do I prepare for the OSCP in 2021?
 date: 2021-03-10 15:38:28 +0100
 categories: [Miscellaneous]
 tags: [oscp-prep, 2021]
