add some THM rooms

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -110,8 +110,13 @@ Machine         | Difficulty | Status   | WU                                    
 
 There is a machine with a buffer overflow for sure in the exam, so I plan to do both of these THM rooms:
 
-- [ ] [ Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
-- [ ] [ Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
+- [ ] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
+- [ ] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
+- [ ] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena)
+- [ ] [Windows PrivEsc](https://tryhackme.com/room/windows10privesc)
+- [ ] [Linux PrivEsc](https://tryhackme.com/room/linuxprivesc)
+- [ ] [Linux PrivEsc Arena](https://tryhackme.com/room/linuxprivescarena)
+- [ ] [OWASP Top 10](https://tryhackme.com/room/owasptop10)
 
 ### [`vulnhub.com`](https://www.vulnhub.com/)
 
