--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -2,7 +2,7 @@
 title: How do I prepare for the OSCP in 2021?
 date: 2021-03-10 15:38:28 +0100
 categories: [Miscellaneous]
-tags: [oscp-prep, 2021]
+tags: [oscp-prep]
 image: /assets/img/oscp/offsec-black.png
 pin: true
 ---
