update oscp prep post

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -11,7 +11,7 @@ Considered like a "must have" certification for those who wants to become Penetr
 
 This is all more true since the [2020 update](https://www.offensive-security.com/offsec/pwk-2020-update/) of **PWK** (`Penetration Testing with Kali Linux`: the preparation course).
 
-> _**Note**: I hope to achieve certification before the end of July while preparing in my spare time, outside of my work and school hours._
+> _**Note**: I hope to achieve certification before the end of the summer while preparing in my spare time, outside of my work and school hours._
 
 ## Summary
 
@@ -114,7 +114,8 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 - [ ] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
 - [ ] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena)
 - [ ] [Windows PrivEsc](https://tryhackme.com/room/windows10privesc)
-- [ ] [Linux PrivEsc](https://tryhackme.com/room/linuxprivesc)
+- [x] [Common Linux Privesc](https://tryhackme.com/room/commonlinuxprivesc)
+- [x] [Linux PrivEsc](https://tryhackme.com/room/linuxprivesc)
 - [ ] [Linux PrivEsc Arena](https://tryhackme.com/room/linuxprivescarena)
 - [ ] [OWASP Top 10](https://tryhackme.com/room/owasptop10)
 
