update OSCP prep post

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -144,7 +144,8 @@ ___
 
 - <u>First part of the exam</u>: 23 hours and 45 minutes to compromise multiple machines.
     + Buffer Overflow machine: 25 points
-    + Other machines of 20 points each
+    + A machine of 10 points
+    + 3 other machines of 20 points each
     + Doing the lab report: 5 bonus points 
 
 > 70 points (out of a total of 100) are required to pass the exam.
