--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -117,7 +117,7 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 - [x] [Common Linux Privesc](https://tryhackme.com/room/commonlinuxprivesc)
 - [x] [Linux PrivEsc](https://tryhackme.com/room/linuxprivesc)
 - [x] [Linux PrivEsc Arena](https://tryhackme.com/room/linuxprivescarena)
-- [ ] [OWASP Top 10](https://tryhackme.com/room/owasptop10)
+- [x] [OWASP Top 10](https://tryhackme.com/room/owasptop10)
 
 ### [`vulnhub.com`](https://www.vulnhub.com/)
 
