update osp prep post

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -112,12 +112,12 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 
 - [ ] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
 - [ ] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
-- [ ] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena)
-- [ ] [Windows PrivEsc](https://tryhackme.com/room/windows10privesc)
-- [x] [Common Linux Privesc](https://tryhackme.com/room/commonlinuxprivesc)
-- [x] [Linux PrivEsc](https://tryhackme.com/room/linuxprivesc)
-- [x] [Linux PrivEsc Arena](https://tryhackme.com/room/linuxprivescarena)
-- [x] [OWASP Top 10](https://tryhackme.com/room/owasptop10)
+- [x] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena) |
+- [x] [Windows PrivEsc](https://tryhackme.com/room/windows10privesc) | [Windows Privesc notes](https://github.com/amirr0r/notes/blob/master/Windows/Privesc.md#windows-privesc)
+- [x] [Common Linux Privesc](https://tryhackme.com/room/commonlinuxprivesc) |
+- [x] [Linux PrivEsc](https://tryhackme.com/room/linuxprivesc) | [Linux Privesc notes](https://github.com/amirr0r/notes/blob/master/Linux/Privesc.md#privesc) | [My WU](https://github.com/amirr0r/thm/tree/master/linux-privesc#linux-privesc)
+- [x] [Linux PrivEsc Arena](https://tryhackme.com/room/linuxprivescarena) | [My WU](https://github.com/amirr0r/thm/tree/master/linux-privesc-arena#linux-privesc-arena)
+- [x] [OWASP Top 10](https://tryhackme.com/room/owasptop10) | [My WU](https://github.com/amirr0r/thm/tree/master/owasp-top-10#owasp-top-10)
 
 ### [`vulnhub.com`](https://www.vulnhub.com/)
 
@@ -146,7 +146,8 @@ ___
     + Buffer Overflow machine: 25 points
     + A machine of 10 points
     + 3 other machines of 20 points each
-    + Doing the lab report: 5 bonus points 
+    + Doing the lab report: 5 bonus points
+        * no less than ten (10) machines in the labs and document [Source](https://help.offensive-security.com/hc/en-us/articles/360046787731-Penetration-Testing-with-Kali-Linux-Reporting#how-many-machines-should-the-lab-report-contain)
 
 > 70 points (out of a total of 100) are required to pass the exam.
 
