--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -112,12 +112,12 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 
 - [ ] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
 - [ ] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
-- [x] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena) |
-- [x] [Windows PrivEsc](https://tryhackme.com/room/windows10privesc) | [Windows Privesc notes](https://github.com/amirr0r/notes/blob/master/Windows/Privesc.md#windows-privesc)
-- [x] [Common Linux Privesc](https://tryhackme.com/room/commonlinuxprivesc) |
-- [x] [Linux PrivEsc](https://tryhackme.com/room/linuxprivesc) | [Linux Privesc notes](https://github.com/amirr0r/notes/blob/master/Linux/Privesc.md#privesc) | [My WU](https://github.com/amirr0r/thm/tree/master/linux-privesc#linux-privesc)
-- [x] [Linux PrivEsc Arena](https://tryhackme.com/room/linuxprivescarena) | [My WU](https://github.com/amirr0r/thm/tree/master/linux-privesc-arena#linux-privesc-arena)
-- [x] [OWASP Top 10](https://tryhackme.com/room/owasptop10) | [My WU](https://github.com/amirr0r/thm/tree/master/owasp-top-10#owasp-top-10)
+- [x] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena) 
+- [x] [Windows PrivEsc](https://tryhackme.com/room/windows10privesc) ([Windows Privesc notes](https://github.com/amirr0r/notes/blob/master/Windows/Privesc.md#windows-privesc))
+- [x] [Common Linux Privesc](https://tryhackme.com/room/commonlinuxprivesc)
+- [x] [Linux PrivEsc](https://tryhackme.com/room/linuxprivesc) ([Linux Privesc notes](https://github.com/amirr0r/notes/blob/master/Linux/Privesc.md#privesc) and [My WU](https://github.com/amirr0r/thm/tree/master/linux-privesc#linux-privesc))
+- [x] [Linux PrivEsc Arena](https://tryhackme.com/room/linuxprivescarena) ([My WU](https://github.com/amirr0r/thm/tree/master/linux-privesc-arena#linux-privesc-arena))
+- [x] [OWASP Top 10](https://tryhackme.com/room/owasptop10) ([My WU](https://github.com/amirr0r/thm/tree/master/owasp-top-10#owasp-top-10))
 
 ### [`vulnhub.com`](https://www.vulnhub.com/)
 
