fix broken links + add some THM rooms to do

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -44,28 +44,28 @@ The following list of VM is inspired from [TJ_Null's list of OSCP-like VMs](http
 
 Machine         | Difficulty | Status  | WU                                                 |
 ----------------|------------|---------|----------------------------------------------------|
-**Lame**        | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/lame)       |
+**Lame**        | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-lame)       |
 **Beep**        | Easy       | &#9989; |                                                    |
-**Blocky**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/blocky)     |
-**Mirai**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/mirai)      |
-**Shocker**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/shocker)    |
-**Nibbles**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/nibbles)    |
-**Valentine**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/valentine)  |
-**SwagShop**    | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/swagshop)   |
-**Networked**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/networked)  |
-**Bashed**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/bashed)     |
-**Irked**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/irked)      |
-**FriendZone**  | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/friendzone) |
-**Frolic**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/frolic)     |
-**Postman**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/postman)    |
-**Sense**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/sense)      |
-**Sunday**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/sunday)     |
-**OpenAdmin**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/openadmin)  |
-**Traverxec**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/traverxec)  |
-**Admirer**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/admirer)    |
-**Blunder**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/blunder)    |
-**Doctor**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/doctor)     |
-**Tabby**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/tabby)      |
+**Blocky**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-blocky)     |
+**Mirai**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-mirai)      |
+**Shocker**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-shocker)    |
+**Nibbles**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-nibbles)    |
+**Valentine**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-valentine)  |
+**SwagShop**    | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-swagshop)   |
+**Networked**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-networked)  |
+**Bashed**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-bashed)     |
+**Irked**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-irked)      |
+**FriendZone**  | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-friendzone) |
+**Frolic**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-frolic)     |
+**Postman**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-postman)    |
+**Sense**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-sense)      |
+**Sunday**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-sunday)     |
+**OpenAdmin**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-openadmin)  |
+**Traverxec**   | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-traverxec)  |
+**Admirer**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-admirer)    |
+**Blunder**     | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-blunder)    |
+**Doctor**      | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-doctor)     |
+**Tabby**       | Easy       | &#9989; | [link](https://amirr0r.github.io/posts/htb-tabby)      |
 **Popcorn**     | Medium     | &#10060;|  |  |
 **Cronos**      | Medium     | &#10060;|  |  |
 **Jarvis**      | Medium     | &#10060;|  |  |
@@ -83,9 +83,9 @@ Machine         | Difficulty | Status  | WU                                     
 
 Machine         | Difficulty | Status   | WU                                                 |
 ----------------|------------|----------|----------------------------------------------------|
-**Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/legacy)     |
-**Blue**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/blue)       |
-**Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/devel)      |
+**Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-legacy)     |
+**Blue**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-blue)       |
+**Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-devel)      |
 **Optimum**     | Easy       | &#9989;  | 
 **Granny**      | Easy       | &#10060; | |
 **Artic**       | Easy       | &#10060; | |
@@ -112,6 +112,9 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 
 - [ ] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
 - [ ] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
+- [ ] [Attacking Kerberos](https://tryhackme.com/room/attackingkerberos)
+- [ ] [Windows Post-Exploitation Basics](https://tryhackme.com/room/postexploit)
+- [x] [Attacktive Directory](https://tryhackme.com/room/attacktivedirectory) ([My WU](https://amirr0r.github.io/posts/thm-attackive-directory/))
 - [x] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena) 
 - [x] [Windows PrivEsc](https://tryhackme.com/room/windows10privesc) ([Windows Privesc notes](https://github.com/amirr0r/notes/blob/master/Windows/Privesc.md#windows-privesc))
 - [x] [Common Linux Privesc](https://tryhackme.com/room/commonlinuxprivesc)
