--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -111,7 +111,7 @@ Machine         | Difficulty | Status   | WU                                    
 There is a machine with a buffer overflow for sure in the exam, so I plan to do both of these THM rooms:
 
 - [ ] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
-- [ ] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
+- [x] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
 - [ ] [Attacking Kerberos](https://tryhackme.com/room/attackingkerberos)
 - [ ] [Windows Post-Exploitation Basics](https://tryhackme.com/room/postexploit)
 - [x] [Attacktive Directory](https://tryhackme.com/room/attacktivedirectory) ([My WU](https://amirr0r.github.io/posts/thm-attackive-directory/))
