update oscp prep post

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -113,7 +113,7 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 - [ ] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
 - [x] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
 - [ ] [Attacking Kerberos](https://tryhackme.com/room/attackingkerberos)
-- [ ] [Windows Post-Exploitation Basics](https://tryhackme.com/room/postexploit)
+- [x] [Windows Post-Exploitation Basics](https://tryhackme.com/room/postexploit) ([My WU](https://amirr0r.github.io/posts/thm-windows-post-exploitation-basics/))
 - [x] [Attacktive Directory](https://tryhackme.com/room/attacktivedirectory) ([My WU](https://amirr0r.github.io/posts/thm-attackive-directory/))
 - [x] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena) 
 - [x] [Windows PrivEsc](https://tryhackme.com/room/windows10privesc) ([Windows Privesc notes](https://github.com/amirr0r/notes/blob/master/Windows/Privesc.md#windows-privesc))
