--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -112,7 +112,7 @@ There is a machine with a buffer overflow for sure in the exam, so I plan to do 
 
 - [ ] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
 - [x] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
-- [ ] [Attacking Kerberos](https://tryhackme.com/room/attackingkerberos)
+- [x] [Attacking Kerberos](https://tryhackme.com/room/attackingkerberos) ([My WU](https://amirr0r.github.io/posts/thm-attacking-kerberos/))
 - [x] [Windows Post-Exploitation Basics](https://tryhackme.com/room/postexploit) ([My WU](https://amirr0r.github.io/posts/thm-windows-post-exploitation-basics/))
 - [x] [Attacktive Directory](https://tryhackme.com/room/attacktivedirectory) ([My WU](https://amirr0r.github.io/posts/thm-attackive-directory/))
 - [x] [Windows PrivEsc Arena](https://tryhackme.com/room/windowsprivescarena) 
