posting Brainpan WU

--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -131,7 +131,7 @@ Machine         | Difficulty   | Status   | WU                                  
 **FristiLeaks** | Beginner     | &#9989;  | [link](https://github.com/amirr0r/vulnhub/tree/master/FristiLeaks#fristileaks-13) |
 **Stapler**     | Beginner     | &#9989;  | [link](https://amirr0r.github.io/posts/vulnhub-stapler/)                          |
 **PwnLab**      | Beginner     | &#9989;  | [link](https://amirr0r.github.io/posts/vulnhub-pwnlab/)                           |
-**Brainpan**    | Intermediate | &#10060; | |
+**Brainpan**    | Intermediate | &#9989;  | [link](https://amirr0r.github.io/posts/thm-brainpan/)                             |
 **Mr-Robot**    | Intermediate | &#9989;  | [link](https://amirr0r.github.io/posts/vulnhub-mr-robot/)                         |
 **Vulnix**      | Intermediate | &#10060; | |
 
