--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -110,7 +110,7 @@ Machine         | Difficulty | Status   | WU                                    
 
 There is a machine with a buffer overflow for sure in the exam, so I plan to do both of these THM rooms:
 
-- [ ] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep)
+- [x] [Windows Buffer Overflow Prep](https://tryhackme.com/room/bufferoverflowprep) ([My WU](https://github.com/amirr0r/thm/tree/master/buffer-overflow-prep#buffer-overflow-prep))
 - [x] [Intro PoC Scripting](https://tryhackme.com/room/intropocscripting)
 - [x] [Attacking Kerberos](https://tryhackme.com/room/attackingkerberos) ([My WU](https://amirr0r.github.io/posts/thm-attacking-kerberos/))
 - [x] [Windows Post-Exploitation Basics](https://tryhackme.com/room/postexploit) ([My WU](https://amirr0r.github.io/posts/thm-windows-post-exploitation-basics/))
