--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -83,12 +83,12 @@ Machine         | Difficulty | Status  | WU                                     
 
 Machine         | Difficulty | Status   | WU                                                 |
 ----------------|------------|----------|----------------------------------------------------|
-**Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-legacy)     |
-**Blue**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-blue)       |
-**Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-devel)      |
+**Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-legacy) |
+**Blue**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-blue)   |
+**Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-devel)  |
 **Optimum**     | Easy       | &#9989;  | 
 **Granny**      | Easy       | &#10060; | |
-**Artic**       | Easy       | &#10060; | |
+**Artic**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-artic) |
 **Grandpa**     | Easy       | &#10060; | |
 **Bounty**      | Easy       | &#10060; | |
 **Jerry**       | Easy       | &#10060; | |
