--- a/_posts/2021-03-10-oscp-prep.md
+++ b/_posts/2021-03-10-oscp-prep.md
@@ -81,15 +81,15 @@ Machine         | Difficulty | Status  | WU                                     
 
 #### Windows
 
-Machine         | Difficulty | Status   | WU                                                 |
-----------------|------------|----------|----------------------------------------------------|
-**Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-legacy) |
-**Blue**        | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-blue)   |
-**Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-devel)  |
-**Optimum**     | Easy       | &#9989;  | 
-**Granny**      | Easy       | &#10060; | |
-**Artic**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-artic) |
-**Grandpa**     | Easy       | &#10060; | |
+Machine         | Difficulty | Status   | WU                                                   |
+----------------|------------|----------|------------------------------------------------------|
+**Legacy**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-legacy)   |
+**Blue**        | Easy       | &#9989;  |  |
+**Devel**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-devel)    |
+**Optimum**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-optimum/) |
+**Granny**      | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-granny/)  |
+**Artic**       | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-artic)    |
+**Grandpa**     | Easy       | &#9989;  | [link](https://amirr0r.github.io/posts/htb-grandpa/) |
 **Bounty**      | Easy       | &#10060; | |
 **Jerry**       | Easy       | &#10060; | |
 **Forest**      | Easy       | &#10060; | |
